initial projext strukture